--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-rnd",
-  "version": "10.3.7",
+  "name": "react-rnd-auditt98",
+  "version": "10.3.8",
   "description": "",
   "title": "react-rnd",
   "main": "./lib/index.es5.js",
